--- a/codemirror/solarized.vag.css
+++ b/codemirror/solarized.vag.css
@@ -79,6 +79,7 @@ http://ethanschoonover.com/solarized/img/solarized-palette.png
 .cm-s-solarized .cm-link { color: #93a1a1; cursor: pointer; }
 .cm-s-solarized .cm-special { color: #37D653; }
 .cm-s-solarized .cm-relationship { color: #F117D4; }
+.cm-s-solarized .cm-annotation { color: #b58900; }
 .cm-s-solarized .cm-em {
   color: #999;
   text-decoration: underline;
